fix dialog corner overflow issue

--- a/apps/www/app/_components/search-dialog/search-dialog.module.css
+++ b/apps/www/app/_components/search-dialog/search-dialog.module.css
@@ -45,7 +45,6 @@
 
 .aboveScroll {
   border-bottom: var(--this-border);
-  background-color: var(--dsc-dialog-background);
 }
 
 .searchBlock {
